--- a/src/audit.ps1.in
+++ b/src/audit.ps1.in
@@ -1,21 +1,6 @@
 #Requires -RunAsAdministrator
 
-param (
-  [ValidateSet("NORMAL", "UNATTEND", "USB")]
-  [string]$AuditMode = "NORMAL",
-  [string]$auditer = "UNATTEND",
-  [string]$name = "UNATTEND",
-  [string]$gi = "UNATTEND",
-  [string]$updates = "UNATTEND",
-  [string]$drivers = "UNATTEND",
-  [string]$antiVirus = "UNATTEND",
-  [string]$clientAdmin = "UNATTEND",
-  [string]$userName = "UNATTEND",
-  [string]$otherBrowsers = "UNATTEND",
-  [string]$softwareValid = "UNATTEND"
-)
-
-Write-Host "Audit script version 1.0.6`n" -ForegroundColor Green
+Write-Out "Audit script version 1.1.0`n" -ForegroundColor Green
 
 //include "functions/hardware_readiness.ps1"
 
@@ -23,143 +8,9 @@ Write-Host "Audit script version 1.0.6`n" -ForegroundColor Green
 
 $rocksaltPath = "C:\Rocksalt"
 
-if ($AuditMode -eq "UNATTEND") {
-  $outPaths = @(
-    $rocksaltPath
-  )
-}
-else {
-  $scriptPath = Split-Path -Parent ([System.Diagnostics.Process]::GetCurrentProcess().MainModule.FileName)
-  Write-Host "Script directory: $scriptPath"
-  $outPaths = @(
-    $scriptPath
-    $rocksaltPath
-  ) | Select-Object -Unique
-}
-
 <# HELPER FUNCTIONS #>
 
-function Write-Error {
-  param (
-    [string]$Message
-  )
-  Write-Host $Message -ForegroundColor Red
-}
-
-function Get-CommandStatus {
-  param (
-    [ScriptBlock]$Command,
-    [string]$Message
-  )
-
-  try {
-    $CommandResult = & $Command
-    if ($?) {
-      Write-Host "Got $Message"
-    }
-    else {
-      Write-Error "Failed to get $Message"
-    }
-  }
-  catch {
-    Write-Error "Error while getting ${Message}: $_"
-    $CommandResult = $null  # In case of an error, return $null
-  }
-
-  return $CommandResult
-}
-
-# (from https://www.dmtf.org/sites/default/files/standards/documents/DSP0134_3.4.0a.pdf)
-Function Convert-RamMemoryType([Parameter(Mandatory = $true)]$MemoryTypeDecimal) {
-  switch ($MemoryTypeDecimal) {
-    00 { 'Unknown' }
-    01 { 'Other' }
-    02 { 'DRAM' }
-    03 { 'Synchronous DRAM' }
-    04 { 'Cache DRAM' }
-    05 { 'EDO' }
-    06 { 'EDRAM' }
-    07 { 'VRAM' }
-    08 { 'SRAM' }
-    09 { 'RAM' }
-    10 { 'ROM' }
-    11 { 'FLASH' }
-    12 { 'EEPROM' }
-    13 { 'FEPROM' }
-    14 { 'EPROM' }
-    15 { 'CDRAM' }
-    16 { '3DRAM' }
-    17 { 'SDRAM' }
-    18 { 'SGRAM' }
-    19 { 'RDRAM' }
-    20 { 'DDR' }
-    21 { 'DDR2' }
-    22 { 'DDR FB-DIMM' }
-    24 { 'DDR3' }
-    25 { 'FBD2' }
-    26 { 'DDR4' }
-    27 { 'LPDDR' }
-    28 { 'LPDDR2' }
-    29 { 'LPDDR3' }
-    30 { 'LPDDR4' }
-    31 { 'Logical non-volatile device' }
-    32 { 'HBM' }
-    33 { 'HBM2' }
-    34 { 'DDR5' }
-    35 { 'LPDDR5' }
-    Default { 'Unknown' }
-  }
-}
-
-function Read-Y($prompt) {
-  do {
-    $response = Read-Host "$prompt (Y/n)"
-  } while ($response -notmatch '^(y|n|)$')
-  return $response -ne 'n'
-}
-
-function Read-N($prompt) {
-  do {
-    $response = Read-Host "$prompt (y/N)"
-  } while ($response -notmatch '^(y|n|)$')
-  return $response -eq 'y'
-}
-
-function Read-No($prompt) {
-  if (Read-N($prompt)) {
-    return "Yes"
-  }
-  else {
-    return "No"
-  }
-}
-
-function Get-TeamViewerInfo {
-  $possiblePaths = @(
-    "HKLM:\SOFTWARE\TeamViewer",
-    "HKLM:\SOFTWARE\Wow6432Node\TeamViewer"
-  )
-
-  $TeamViewerInfo = $null
-  foreach ($path in $possiblePaths) {
-    if (Test-Path $path) {
-      $TeamViewerInfo = Get-CommandStatus -Command { Get-ItemProperty -Path $path } -Message "TeamViewer info from: $path"
-    }
-  }
-  return $TeamViewerInfo
-}
-
-function Add-RocksaltUser {
-  if ($AuditMode -ne "UNATTEND" -and (Read-Y "Create local Rocksalt user?")) {
-    $password = Read-Host "Enter password" -AsSecureString
-    New-LocalUser -Name "Rocksalt" -Password $password -FullName "Rocksalt" -Description "Rocksalt" | Out-Null
-    Add-LocalGroupMember -Group "Administrators" -Member "Rocksalt" | Out-Null
-    Write-Host "Rocksalt user created"
-    return "Yes"
-  }
-  return "No"
-}
-
+//include "functions/helper.ps1"
 
 <# INITIAL SETUP #>
 
@@ -168,332 +19,93 @@ $warnings = @()
 # Ensure directory exists
 if (-not (Test-Path -Path $rocksaltPath)) {
   New-Item -ItemType Directory -Path $rocksaltPath | Out-Null
-  Write-Host "Output directory created: $rocksaltPath"
+  Write-Out "Output directory created: $rocksaltPath"
 }
 else {
-  Write-Host "Output directory already exists: $rocksaltPath"
+  Write-Out "Output directory already exists: $rocksaltPath"
 }
-
-# Run various 'Get' functions and save to local variables
-# (e.g. so that we only have to call Get-ComputerInfo once - it is a very slow function!)
-Write-Host "`n=== Getting system information ===`n" -ForegroundColor DarkYellow
-
-$ComputerName = $env:COMPUTERNAME
-$ComputerInfo = Get-CommandStatus -Command { Get-ComputerInfo } -Message 'computer info'
-$RamInfo = Get-CommandStatus -Command { Get-WmiObject -Class Win32_PhysicalMemory } -Message 'RAM'
-$Admins = @( Get-CommandStatus -Command { Get-LocalGroupMember -Group "Administrators" | Select-Object -ExpandProperty Name } -Message 'admins' )
-$Users = @( Get-CommandStatus -Command { Get-LocalGroupMember -Group "Users" | Where-Object {
-      $Admins -notcontains $_.Name -and
-      $_.Name -notmatch "^NT AUTHORITY" -and
-      $_.Name -notmatch "^BUILTIN"
-    } | Select-Object -ExpandProperty Name } -Message 'users' )
-$TeamViewerInfo = Get-TeamViewerInfo
-$bitlocker = Get-CommandStatus -Command { Get-BitLockerVolume -MountPoint "C:" } -Message 'BitLocker'
-$PhysicalDisks = Get-CommandStatus -Command { Get-PhysicalDisk } -Message 'disks'
-$InstalledSoftware = Get-CommandStatus -Command { Get-ItemProperty -Path HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\*, HKLM:\SOFTWARE\Wow6432Node\Microsoft\Windows\CurrentVersion\Uninstall\* } -Message 'software'
-$HardwareReadiness = Get-CommandStatus -Command { Invoke-Expression $hardwareReadinessScript 2>&1 | Out-String | ConvertFrom-Json } -Message 'hardware readiness'
 
 
 <# AUDIT INFORMATION #>
 
-$date = Get-Date -Format "yyyy-MM-dd"
-$manufacturer = $ComputerInfo.CsManufacturer
-$model = $ComputerInfo.CsModel
-$type = if ($ComputerInfo.CsPCSystemType -eq 2) { "Laptop" } else { "Desktop" }
-$serialNumber = $ComputerInfo.BiosSeralNumber
-$os = $ComputerInfo.OSName
-$domainName = $ComputerInfo.CsDomain
-$processor = $ComputerInfo.CsProcessors.Name -join ', '
-$ram = "$([math]::Round($ComputerInfo.CsTotalPhysicalMemory / 1GB))GB"
-try {
-  $ramType = Convert-RamMemoryType -MemoryTypeDecimal ($RamInfo[0].SMBIOSMemoryType)
-}
-catch {
-  $ramType = "Unknown"
-}
-$disk1Size = "$([math]::Round($PhysicalDisks[0].Size / 1GB))GB"
-$disk1Type = "$($PhysicalDisks[0].MediaType) $($PhysicalDisks[0].BusType)"
-if ($PhysicalDisks.Count -gt 1) {
-  $disk2Size = "$([math]::Round($PhysicalDisks[1].Size / 1GB))GB"
-  $disk2Type = "$($PhysicalDisks[1].MediaType) $($PhysicalDisks[1].BusType)"
-}
-else {
-  $disk2Size = "N/A"
-  $disk2Type = "N/A"
-}
-$chromeVersion = ($InstalledSoftware | Where-Object { $_.DisplayName -eq "Google Chrome" }).DisplayVersion
-$firefoxVersion = ($InstalledSoftware | Where-Object { $_.DisplayName -eq "Mozilla Firefox" }).DisplayVersion
-$edgeVersion = ($InstalledSoftware | Where-Object { $_.DisplayName -eq "Microsoft Edge" }).DisplayVersion
-
-if ($physicalDisks.Count -gt 2) {
-  Write-Host "Warning: More than 2 disks detected" -ForegroundColor Yellow
-  $warnings += "More than 2 disks detected"
-}
+//include "functions/audit_info.ps1"
 
 
 <# BRUTE FORCE PROTECTION #>
 
-Write-Host "`n=== Running brute force commands ===`n" -ForegroundColor DarkYellow
-net accounts /lockoutthreshold:10
-net accounts /lockoutwindow:5
-net accounts /lockoutduration:30
+Write-Out "`n=== Running brute force commands ===`n" -ForegroundColor DarkYellow
+net accounts /lockoutthreshold:10 | Out-Null
+net accounts /lockoutwindow:5 | Out-Null
+net accounts /lockoutduration:30 | Out-Null
 
 
 <# TEAMVIEWER #>
 
-function Install-TeamViewer {
-  Write-Host "Installing TeamViewer..."
-  $teamviewerInstaller = Join-Path -Path $rocksaltPath -ChildPath "TeamViewer_Host_Setup.exe"
-
-  # Download TeamViewer
-  Invoke-WebRequest -Uri "https://customdesignservice.teamviewer.com/download/windows/v15/65v9fp5/TeamViewer_Host_Setup.exe" -OutFile $teamviewerInstaller
-  if (-not (Test-Path $teamviewerInstaller) -or ((Get-Item $teamviewerInstaller).Length -lt 1MB)) {
-    Write-Host "Failed to download Rocksalt teamviwer installer" -ForegroundColor DarkYellow
-    Write-Host "Trying generic download link..."
-    Invoke-WebRequest -Uri "https://download.teamviewer.com/download/TeamViewer_Host_Setup.exe" -OutFile $teamviewerInstaller
-
-    if (-not (Test-Path $teamviewerInstaller) -or ((Get-Item $teamviewerInstaller).Length -lt 1MB)) {
-      Write-Error "Failed to download teamviewer from generic link"
-      return $null
-    }
-  }
-
-  Write-Host "TeamViewer installer downloaded to $teamviewerInstaller"
-
-  # Install TeamViewer silently
-  Start-Process $teamviewerInstaller -ArgumentList "/S", "/ACCEPTEULA=1" -WindowStyle Hidden -Wait
-  if (!$?) {
-    Write-Error "Failed to install TeamViewer"
-    return $null
-  }
-
-  Write-Host "TeamViewer installed successfully"
-  return Get-TeamViewerInfo
-}
-
-if (-not $TeamViewerInfo) {
-  Write-Host "`n=== Checking Teamviewer ===`n" -ForegroundColor DarkYellow
-  Write-Error "TeamViewer not installed"
-  if ($AuditMode -eq "UNATTEND" -or (Read-Y "Install TeamViewer?")) {
-    $TeamViewerInfo = Install-TeamViewer
-  }
-}
-
-$teamViewer = $TeamViewerInfo.ClientID
+//include "functions/teamviewer.ps1"
 
 
 <# ROCKSALT USER #>
 
-Write-Host "`n=== Checking for Rocksalt User ===`n" -ForegroundColor DarkYellow
-
-if ($Admins -contains "$computerName\Rocksalt") {
-  Write-Host "Local Rocksalt user exits and is administrator"
-  $rocksaltExists = "Yes"
-}
-elseif ($Admins -match '\\Rocksalt$') {
-  Write-Host "Warning: Rocksalt is an administrator, but it's a domain account" -ForegroundColor Yellow
-
-  $rocksaltExists = Add-RocksaltUser
-}
-elseif (Get-LocalUser -Name "Rocksalt" -ErrorAction SilentlyContinue) {
-  Write-Error "Local Rocksalt user is not administrator"
-
-  if ($AuditMode -eq "UNATTEND" -or (Read-Y "Make Rocksalt admin?")) {
-    Add-LocalGroupMember -Group "Administrators" -Member "Rocksalt"
-    Write "Local Rocksalt user added to Administrators group"
-    $rocksaltExists = "Yes"
-  }
-  else {
-    $rocksaltExists = "No"
-  }
-}
-else {
-  Write-Error "Local Rocksalt user does not exist"
-
-  $rocksaltExists = Add-RocksaltUser
-}
+//include "functions/rocksalt_user.ps1"
 
 
 <# WINDOWS 11 COMPATIBLE #>
 
-Write-Host "`n=== Checking Windows 11 compatibility ===`n" -ForegroundColor DarkYellow
-
-$onWin11 = $os -match "11"
-
-if ($HardwareReadiness.returnResult -eq "CAPABLE") {
-  Write-Host "Windows 11 compatible" -ForegroundColor Green
-  $win11Comp = "Yes"
-
-  if (-not $onWin11) {
-    Write-Error "Windows 11 is not installed please update"
-  }
-}
-else {
-  Write-Error "Not Windows 11 compatible"
-  $win11Comp = "No"
-  Write-Error "Reason: $($HardwareReadiness.returnReason)"
-
-  if ($onWin11) {
-    Write-Host "Warning: Windows 11 is installed but not compatible" -ForegroundColor Yellow
-    $warnings += "Windows 11 is installed but not compatible"
-  }
-}
+//include "functions/windows11_compatible.ps1"
 
 
 <# AUDITER INPUT #>
 
-if ($AuditMode -ne "UNATTEND") {
-  Write-Host "`n=== Audit information ===`n" -ForegroundColor DarkYellow
-
-  $auditer = Read-Host "RS (initials)"
-  $name = Read-Host "Name"
-  $gi = "GI$((Read-Host "GI") -replace '\D', '')"
-  $updates = Read-No "Updates"
-  $drivers = Read-No "Drivers"
-  $antiVirus = Read-No "Antivirus"
-
-  Write-Host "`nClient Admin:"
-  for ($i = 0; $i -lt $Admins.Count; $i++) {
-    Write-Host " [$($i + 1)] $($Admins[$i])"
-  }
-  $clientAdmin = Read-Host "Enter number or custom"
-  if ($clientAdmin -as [int] -and $clientAdmin -gt 0 -and $clientAdmin -le $Admins.Count) {
-    $clientAdmin = $Admins[$clientAdmin - 1]
-  }
-
-  Write-Host "`nUsername (Account they use):"
-  for ($i = 0; $i -lt $Users.Count; $i++) {
-    Write-Host " [$($i + 1)] $($Users[$i])"
-  }
-  $userName = Read-Host "Enter number or custom"
-  if ($userName -as [int] -and $userName -gt 0 -and $userName -le $Users.Count) {
-    $userName = $Users[$userName - 1]
-  }
-
-  Write-Host "`nChrome version: $chromeVersion`nFirefox version: $firefoxVersion`nEdge version: $edgeVersion"
-
-  $InstalledSoftware |
-  Where-Object { $_.DisplayName -ne $null } |
-  Sort-Object DisplayName, DisplayVersion |
-  Format-Table @{Label = 'Name'; Expression = { $_.DisplayName } },
-  @{Label = 'Version'; Expression = { $_.DisplayVersion } },
-  @{Label = 'Publisher'; Expression = { $_.Publisher } },
-  @{Label = 'Install Date'; Expression = { $_.InstallDate } } -AutoSize
-  $otherBrowsers = Read-Host "Other browsers"
-  $softwareValid = Read-No "Software valid?"
-}
+//ifndef NO_INPUT
+//include "functions/audit_input.ps1"
+//endif
 
 
 <# BITLOCKER #>
 
-Write-Host "`n=== Checking Bitlocker ===`n" -ForegroundColor DarkYellow
-
-$bitlockerFilenames = @()
-
-if ($bitlocker.ProtectionStatus -eq 1) {
-  Write-Host "Bitlocker is enabled" -ForegroundColor Green
-  $bitlockerOn = "Yes"
-
-  $protector = $bitlocker.KeyProtector | Where-Object { $_.KeyProtectorType -eq 'RecoveryPassword' }
-
-  $bitlockerFilenames = @()
-  if ($AuditMode -ne "UNATTEND") {
-    $bitlockerFilenames += "$gi $name $ComputerName Bitlocker $($protector.KeyProtectorId).txt"
-  }
-  $bitlockerFilenames += "$ComputerName Bitlocker $($protector.KeyProtectorId).txt"
-
-  $bitlockerInfo = "$($protector.KeyProtectorId)`n$($protector.RecoveryPassword)"
-}
-else {
-  Write-Error "Bitlocker is not enabled"
-  $bitlockerOn = "No"
-}
+//include "functions/bitlocker.ps1"
 
 
 <# OUTPUT #>
 
-Write-Host "`n=== Output ===`n" -ForegroundColor DarkYellow
+Write-Out "`n=== Output ===`n" -ForegroundColor DarkYellow
 
-if ($AuditMode -ne "UNATTEND") {
-  $notes = Read-Host "Notes"
-}
-
-if ($warnings.Count -gt 0 -and ($AuditMode -eq "UNATTEND" -or (Read-Y "Would you like to add warnings to notes?"))) {
+if ($warnings.Count -gt 0 -and (Read-Y "Would you like to add warnings to notes?")) {
   if ($notes -ne "") {
     $notes += "; "
   }
   $notes += "Warnings: $($warnings -join ', ')"
 }
 
-$lineTable = [PSCustomObject]@{
-  Auditer         = $auditer
-  Date            = $date
-  Done            = "Part"
-  Users           = $name
-  GI              = $gi
-  PCName          = $ComputerName
-  Manufacturer    = $manufacturer
-  Model           = $model
-  Type            = $type
-  SerialNumber    = $serialNumber
-  OS              = $os
-  Win11Compatible = $win11Comp
-  Updates         = $updates
-  Drivers         = $drivers
-  AntiVirus       = $antiVirus
-  RocksaltExists  = $rocksaltExists
-  ClientAdmin     = $clientAdmin
-  UserName        = $userName
-  DomainName      = $domainName
-  Processor       = $processor
-  RAM             = $ram
-  RAMType         = $ramType
-  DiskSize        = $disk1Size
-  DiskType        = $disk1Type
-  Disk2Size       = $disk2Size
-  Disk2Type       = $disk2Type
-  Bitlocker       = $bitlockerOn
-  TeamViewer      = $teamviewer
-  BruteForce      = "Yes"
-  ChromeVersion   = $chromeVersion
-  FirefoxVersion  = $firefoxVersion
-  EdgeVersion     = $edgeVersion
-  OtherBrowsers   = $otherBrowsers
-  SoftwareValid   = $softwareValid
-  Notes           = $notes
-}
-
-$line = ($lineTable.PSObject.Properties | ForEach-Object { $_.Value }) -join "`t"
-
-Write-Host "`nTab-separated Line:`n" -ForegroundColor DarkYellow
-Write-Host $line
-
-Write-Host "`n=== Vertical Table ===`n" -ForegroundColor DarkYellow
-$lineTable | Format-List
+//ifdef NO_INPUT
+//include "functions/output_table_noinput.ps1"
+//else
+//include "functions/output_table.ps1"
+//endif
 
 
 <# SAVE OUTPUT #>
 
-Write-Host "`n=== Saving output ===`n" -ForegroundColor DarkYellow
+Write-Out "`n=== Saving output ===`n" -ForegroundColor DarkYellow
+
+$scriptPath = Split-Path -Parent ([System.Diagnostics.Process]::GetCurrentProcess().MainModule.FileName)
+Write-Out "Script directory: $scriptPath"
+$outPaths = @(
+  $scriptPath
+  $rocksaltPath
+) | Select-Object -Unique
 
 foreach ($path in $outPaths) {
   $auditFile = Join-Path $path "Audit.txt"
   $line | Out-File -Append -FilePath $auditFile
-  Write-Host "Audit information has been appended to $auditFile"
+  Write-Out "Audit information has been appended to $auditFile"
 
-  foreach ($file in $bitlockerFilenames) {
-    $bitlockerFile = Join-Path $path $file
-    $bitlockerInfo | Out-File -FilePath $bitlockerFile
-    if (Test-Path $bitlockerFile) {
-      Write-Host "Bitlocker saved to $bitlockerFile`n"
-      break
-    }
-    else {
-      Write-Error "Failed to save Bitlocker info to $bitlockerFile`n"
-    }
+  $bitlockerFile = Join-Path $path $fbitlockerFilename
+  $bitlockerInfo | Out-File -FilePath $bitlockerFile
+  if (Test-Path $bitlockerFile) {
+    Write-Out "Bitlocker saved to $bitlockerFile`n"
   }
-}
-
-if ($AuditMode -ne "UNATTEND") {
-  Read-Host -Prompt "Press Enter to exit"
+  else {
+    Write-Error "Failed to save Bitlocker info to $bitlockerFile`n"
+  }
 }
