--- a/src/audit.ps1.in
+++ b/src/audit.ps1.in
@@ -83,10 +83,20 @@ if ($warnings.Count -gt 0 -and (Read-Y "Would you like to add warnings to notes?
 //include "functions/output_table_noinput.ps1"
 //endif
 
+//ifdef OUTPUT
+$line = ($outTable.PSObject.Properties | ForEach-Object { $_.Value }) -join "`t"
+
+Write-Out "`nTab-separated Line:`n" -ForegroundColor DarkYellow
+Write-Out $line
+
+Write-Out "`n=== Vertical Table ===`n" -ForegroundColor DarkYellow
+$outTable | Format-List
+//endif
+
 
 <# SAVE OUTPUT #>
 
-//ifdef OUTPUT
+//ifdef NORMAL
 //include "functions/output.ps1"
 //endif
 //ifdef DATA_SOURCE
