--- a/src/audit.ps1.in
+++ b/src/audit.ps1.in
@@ -2,15 +2,17 @@
 
 //include "functions/hardware_readiness.ps1"
 
+
 <# HELPER FUNCTIONS #>
 
 //include "functions/helper.ps1"
+
 
 <# INITIAL SETUP #>
 
 Write-Out "Audit script version 1.1.0`n" -ForegroundColor Green
 
-$warnings = @()
+$global:warnings = @()
 
 $rocksaltPath = "C:\Rocksalt"
 
