--- a/src/audit.ps1.in
+++ b/src/audit.ps1.in
@@ -10,7 +10,7 @@
 
 <# INITIAL SETUP #>
 
-Write-Out "Audit script version 1.1.0`n" -ForegroundColor Green
+Write-Out "Audit script version 1.1.1`n" -ForegroundColor Green
 
 $global:warnings = @()
 
@@ -73,10 +73,17 @@ if ($warnings.Count -gt 0 -and (Read-Y "Would you like to add warnings to notes?
   $notes += "Warnings: $($warnings -join ', ')"
 }
 
-//ifdef INPUT
-//include "functions/output_table.ps1"
-//else
-//include "functions/output_table_noinput.ps1"
+//ifdef NORMAL
+//include "output_table/normal.ps1"
+//endif
+//ifdef ACTION1
+//include "output_table/action1.ps1"
+//endif
+//ifdef DATA_SOURCE
+//include "output_table/data_source.ps1"
+//endif
+//ifdef CUSTOM_ATTRIBUTES
+//include "output_table/custom_attributes.ps1"
 //endif
 
 //ifdef OUTPUT
