Added automatic versioning to the Makefile

--- a/src/audit.ps1.in
+++ b/src/audit.ps1.in
@@ -10,7 +10,7 @@
 
 <# INITIAL SETUP #>
 
-Write-Out "Audit script version 1.1.1`n" -ForegroundColor Green
+Write-Out "Audit script version //VERSION`n" -ForegroundColor Green
 
 $global:warnings = @()
 
