Updated to include a comment with the version and build date & time

--- a/src/audit.ps1.in
+++ b/src/audit.ps1.in
@@ -1,5 +1,8 @@
 #Requires -RunAsAdministrator
 
+# Version: //VERSION
+# DateTime: //DATE //TIME
+
 //include "functions/hardware_readiness.ps1"
 
 
